--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "4.5.2",
+    "bootstrap-social": "5.1.1",
+    "font-awesome": "4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-magnifiers": "^1.4.0",
+    "react-popper": "1.3.6",
+    "react-redux": "7.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
+    "reactstrap": "8.5.1",
+    "redux": "4.0.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
